--- a/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
@@ -1,148 +1,126 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.zinn.ca/helm.toolkit.fluxcd.io/helmrelease_v2beta1.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-    name: radarr
-    namespace: media
+  name: radarr
+  namespace: media
 spec:
-    interval: 15m
-    chart:
-        spec:
-            chart: radarr
-            version: 23.12.0
-            sourceRef:
-                kind: HelmRepository
-                name: truecharts
-                namespace: flux-system
-    timeout: 20m
-    maxHistory: 3
-    install:
-        createNamespace: true
-        remediation:
-          retries: 3
-    upgrade:
-        cleanupOnFail: true
-        remediation:
-          retries: 3
-    uninstall:
-        keepHistory: false
-    values:
-        credentials:
-            s3:
-                type: s3
-                url: "${S3URL}"
-                bucket: "${S3PREFIX}radarr"
-                accessKey: "${S3ID}"
-                secretKey: "${S3KEY}"
-                encrKey: "${S3KEY}"
-        TZ: America/Los_Angeles
-        securityContext:
-            container:
-                UMASK: "0022"
-                readOnlyRootFilesystem: false
-                runAsGroup: 1000
-                runAsUser: 1000
-            pod:
-                fsGroup: 1000
-                fsGroupChangePolicy: OnRootMismatch
-        metrics:
-            main:
-               enabled: false
-        workload:
-            exportarr:
-               enabled: false
-
-        ingress:
-            main:
-                enabled: true
-                hosts:
-                  - host: radarr.${BASE_DOMAIN}
-                    paths:
-                      - path: /
-                        pathType: Prefix
-                tls:
-                  hosts:
-                    - radarr.${BASE_DOMAIN}
-                  secretName: radarr-tls
-                integrations:
-                  traefik:
-                    enabled: true
-                    middlewares:
-                      - name: local
-                        namespace: traefik
-                      - name: bouncer
-                        namespace: traefik
-                  certManager:
-                    enabled: true
-                    certificateIssuer: wethecommon-prod-cert
-                  homepage:
-                      description: Movie Downloader/Manager
-                      enabled: true
-                      group: Content Management
-                      icon: ""
-                      name: Radarr
-                      widget:
-                        custom:
-                          key: c0a84c5da5804c47a146ea036e5b961d
-                        enabled: true
-
-        service:
-            main:
-                enabled: true
-                type: LoadBalancer
-                loadBalancerIP: ${RADARR_IP}
-                ports:
-                    main:
-                        port: 7878
-
-        persistence:
-            config:
-                enabled: true
-                targetSelector:
-                    main:
-                        mountPath: /config
-                    exportarr:
-                        mountPath: /config
-                        readOnly: true
-            data:
-                enabled: true
-                type: nfs
-                path: /mnt/Pibbs-Horde/media/data
-                server: 192.168.10.123
-                globalMounts:
-                    - path: /data
-                      readOnly: false
-                mountPath: /data
-            movies:
-                enabled: true
-                type: nfs
-                path: /mnt/Pibbs-Horde/media/data/media/movies
-                server: 192.168.10.123
-                globalMounts:
-                    - path: /movies
-                      readOnly: false
-                mountPath: /movies
-            downloads:
-                enabled: true
-                type: nfs
-                path: /mnt/Pibbs-Horde/media/data/usenet
-                server: 192.168.10.123
-                globalMounts:
-                    - path: /usenet
-                      readOnly: false
-                mountPath: /usenet
-            backup:
-                enabled: true
-                mountPath: /config/Backups
-                volsync:
-                    - name: minio
-                      type: restic
-                      credentials: s3
-                      dest:
-                        cacheCapacity: 10Gi
-                        enabled: true
-                      src:
-                        enabled: true
-                        cacheCapacity: 10Gi
-
+  interval: 15m
+  chart:
+    spec:
+      chart: radarr
+      version: 23.12.0
+      sourceRef:
+        kind: HelmRepository
+        name: truecharts
+        namespace: flux-system
+  timeout: 20m
+  maxHistory: 3
+  install:
+    createNamespace: true
+    remediation:
+      retries: 3
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
+  uninstall:
+    keepHistory: false
+  values:
+    global:
+      stopAll: false
+    TZ: America/Los_Angeles
+    credentials:
+      s3:
+        type: s3
+        url: "${S3URL}"
+        bucket: "${S3PREFIX}radarr"
+        accessKey: "${S3ID}"
+        secretKey: "${S3KEY}"
+        encrKey: "${S3KEY}"
+    securityContext:
+      container:
+        UMASK: "0022"
+        readOnlyRootFilesystem: false
+        runAsGroup: 1000
+        runAsUser: 1000
+      pod:
+        fsGroup: 1000
+        fsGroupChangePolicy: OnRootMismatch
+    metrics:
+      main:
+        enabled: false
+    workload:
+      exportarr:
+        enabled: false
+    persistence:
+      config:
+        enabled: true
+        targetSelector:
+          main:
+            mountPath: /config
+          exportarr:
+            mountPath: /config
+            readOnly: true
+      data:
+        enabled: true
+        type: nfs
+        path: /mnt/Pibbs-Horde/media/data
+        server: 192.168.10.123
+        mountPath: /data
+      movies:
+        enabled: true
+        type: nfs
+        path: /mnt/Pibbs-Horde/media/data/media/movies
+        server: 192.168.10.123
+        mountPath: /movies
+      downloads:
+        enabled: true
+        type: nfs
+        path: /mnt/Pibbs-Horde/media/data/usenet
+        server: 192.168.10.123
+        mountPath: /usenet
+      backup:
+        enabled: true
+        mountPath: /config/Backups
+        volsync:
+          - name: backup
+            type: restic
+            credentials: s3
+            dest:
+              enabled: true
+              cacheCapacity: 10Gi
+            src:
+              enabled: true
+              cacheCapacity: 10Gi
+    ingress:
+      main:
+        enabled: true
+        hosts:
+          - host: "radarr.${BASE_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
+        tls:
+          hosts:
+            - radarr.${BASE_DOMAIN}
+          secretName: radarr-tls
+        integrations:
+          traefik:
+            enabled: true
+            middlewares:
+              - name: local
+                namespace: traefik
+              - name: bouncer
+                namespace: traefik
+          certManager:
+            enabled: true
+            certificateIssuer: wethecommon-prod-cert
+    service:
+      main:
+        enabled: true
+        type: LoadBalancer
+        loadBalancerIP: ${RADARR_IP}
+        ports:
+          main:
+            port: 7878
