--- a/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
@@ -83,16 +83,16 @@ spec:
       backup:
         enabled: true
         mountPath: /config/Backups
-        volsync:
-          - name: backup
-            type: restic
-            credentials: s3
-            dest:
-              enabled: true
-              cacheCapacity: 10Gi
-            src:
-              enabled: true
-              cacheCapacity: 10Gi
+#        volsync:
+#          - name: backup
+#            type: restic
+#            credentials: s3
+#            dest:
+#              enabled: true
+#              cacheCapacity: 10Gi
+#            src:
+#              enabled: true
+#              cacheCapacity: 10Gi
     ingress:
       main:
         enabled: true
