--- a/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
@@ -24,7 +24,7 @@ spec:
                 bucket: homepage-config
                 accessKey: "${S3ID}"
                 secretKey: "${S3KEY}"
-                encrKey: "${S3EKEY}"
+                encrKey: "${S3KEY}"
         TZ: America/Los_Angeles
         configmap:
             config:
