--- a/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
@@ -117,12 +117,12 @@ spec:
         enabled: true
         mountPath: /config/Backups
         volsync:
-          - name: b2
-            type: restic
-            credentials: s3
+          - credentials: s3
             dest:
               enabled: false
-              cacheCapacity: 10Gi
+            name: backup
             src:
               enabled: true
               cacheCapacity: 10Gi
+            type: restic
+
