--- a/clusters/main/kubernetes/system/longhorn/app/helm-release.yaml
+++ b/clusters/main/kubernetes/system/longhorn/app/helm-release.yaml
@@ -25,6 +25,7 @@ spec:
         remediation:
             retries: 3
     values:
+      TZ: America/Los_Angeles
       defaultSettings:
         # Increase to 3 for a multi-node cluster
         defaultReplicaCount: 1
