--- a/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
@@ -107,7 +107,7 @@ spec:
                name: config
                type: restic
                dest:
-                 enabled: false
+                 enabled: true
                  cacheCapacity: 10Gi
                src:
                  enabled: true
@@ -141,7 +141,7 @@ spec:
             name: backup
             type: restic
             dest:
-              enabled: false
+              enabled: true
               cacheCapacity: 10Gi
             src:
               enabled: true
