--- a/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
@@ -153,7 +153,7 @@ spec:
                             name: config
                             type: restic
                             dest:
-                                enabled: false
+                                enabled: true
                                 cacheCapacity: 10Gi
                             src:
                                 enabled: true
