--- a/clusters/main/kubernetes/apps/media/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/media/kustomization.yaml
@@ -7,3 +7,12 @@ resources:
   - roon/ks.yaml
   - prowlarr/ks.yaml
   - radarr/ks.yaml
+  - dizquetv/ks.yaml
+  - emby/ks.yaml
+  - lidarr/ks.yaml
+  - nzbget/ks.yaml
+  - overseerr/ks.yaml
+  - plex/ks.yaml
+  - sabnzbd/ks.yaml
+  - sonarr/ks.yaml
+  - tinymediamanager/ks.yaml
