--- a/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
@@ -99,7 +99,7 @@ spec:
     persistence:
       config:
         enabled: true
-        targetSelector:
+        readOnly: false
           main:
             mountPath: /config
             volsync:
@@ -121,18 +121,42 @@ spec:
         path: /mnt/Pibbs-Horde/media/data
         server: 192.168.10.123
         mountPath: /data
+        mountOptions:
+         - nfsvers=4
+         - tcp
+         - intr
+         - hard
+         - noatime
+         - nodiratime
+         - nolock
       movies:
         enabled: true
         type: nfs
         path: /mnt/Pibbs-Horde/media/data/media/movies
         server: 192.168.10.123
         mountPath: /movies
+        mountOptions:
+         - nfsvers=4
+         - tcp
+         - intr
+         - hard
+         - noatime
+         - nodiratime
+         - nolock
       downloads:
         enabled: true
         type: nfs
         path: /mnt/Pibbs-Horde/media/data/usenet
         server: 192.168.10.123
         mountPath: /usenet
+        mountOptions:
+         - nfsvers=4
+         - tcp
+         - intr
+         - hard
+         - noatime
+         - nodiratime
+         - nolock
       backup:
         enabled: true
         mountPath: /config/Backups
