--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -174,9 +174,9 @@ spec:
             requireHTTPS: false
             serverIP: ${PLEX_IP}
         release_name: plex
-        resources:
-            limits:
-                nvidia.com/gpu: 1
+  #      resources:
+  #          limits:
+  #              nvidia.com/gpu: 1
         securityContext:
             container:
                 UMASK: "0022"
