--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -172,7 +172,7 @@ spec:
             additionalAdvertiseURL: ""
             disableGDM: false
             requireHTTPS: false
-            serverIP: ${PLEX_IP}
+            serverIP: 192.168.10.177
         release_name: plex
   #      resources:
   #          limits:
