--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -203,7 +203,9 @@ spec:
                         main:
                             env:
                                 ALLOWED_NETWORKS: 172.16.0.0/12,10.0.0.0/8,192.168.0.0/16
-                                PLEX_CLAIM: claim-Q77yknWyvCmzHeszyNtu
+                                PLEX_CLAIM: claim-wKXzwkXgWegDdSbWzwz9
+                                PLEX_PREFERENCE_GDM: GdmEnabled={{ ternary "0" "1" .Values.plex.disableGDM }}
+                                PLEX_PREFERENCE_SEC_CON: secureConnections={{ ternary "0" "1" .Values.plex.requireHTTPS }}
                             probes:
                                 liveness:
                                     enabled: true
