--- a/clusters/main/kubernetes/apps/media/nzbget/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/nzbget/app/helm-release.yaml
@@ -72,18 +72,30 @@ spec:
             config:
                 enabled: true
                 readOnly: false
-                main:
-                    mountPath: /config
-                    volsync:
-                     - name: config
-                       type: restic
-                       credentials: s3
-                       dest:
-                         enabled: true
-                         cacheCapacity: 100Gi
-                       src:
-                         enabled: true
-                         cacheCapacity: 100Gi
+                type: nfs
+                path: /mnt/Pibbs-Horde/media/data/app_backups/NZBGet_Backups/config
+                server: 192.168.10.123
+                mountPath: /data
+                mountOptions:
+                 - nfsvers=4
+                 - tcp
+                 - intr
+                 - hard
+                 - noatime
+                 - nodiratime
+                 - nolock
+ #               main:
+ #                   mountPath: /config
+ #                   volsync:
+ #                    - name: config
+#                       type: restic
+#                       credentials: s3
+#                       dest:
+#                         enabled: true
+#                         cacheCapacity: 100Gi
+#                       src:
+#                         enabled: true
+#                         cacheCapacity: 100Gi
             data:
                 enabled: true
                 type: nfs
