--- a/clusters/main/talos/talconfig.yaml
+++ b/clusters/main/talos/talconfig.yaml
@@ -48,6 +48,8 @@ controlPlane:
      - name: nvme_tcp
      - name: vfio_pci
      - name: uio_pci_generic
+     - name: i915
+     - name: nvidia
     schematic:
         customization:
             extraKernelArgs:
