--- a/clusters/main/kubernetes/kube-system/nvidia-gpu-operator/app/helm-release.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-gpu-operator/app/helm-release.yaml
@@ -1,5 +1,3 @@
----
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -31,3 +29,8 @@ spec:
       driver:
         enabled: false
       runtimeClassName: nvidia
+      sharing:
+        timeSlicing:
+          resources:
+            - name: nvidia.com/gpu
+              replicas: 4
