--- a/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/helm-release.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/helm-release.yaml
@@ -2,8 +2,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: nvidia-device-plugin
-  namespace: kube-system
+  name: nvidia-gpu-operator
+  namespace: nvidia
 spec:
   interval: 15m
   chart:
@@ -12,7 +12,7 @@ spec:
       version: 0.17.0
       sourceRef:
         kind: HelmRepository
-        name: nvidia-dvp
+        name: nvidia
         namespace: flux-system
   install:
     remediation:
