--- a/repositories/helm/nvidia.yaml
+++ b/repositories/helm/nvidia.yaml
@@ -4,7 +4,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: nvidia
-  namespace: flux-system
+  namespace: nvidia
 spec:
   interval: 2h
-  url: https://helm.ngc.nvidia.com/nvidia
+  url: https://nvidia.github.io/k8s-device-plugin
