--- a/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/namespace.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/namespace.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: nvidia
+  name: nvidia-device-plugin
   labels:
     pod-security.kubernetes.io/enforce: privileged
