--- a/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/helm-release.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/helm-release.yaml
@@ -1,10 +1,9 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: nvidia-gpu-operator
-  namespace: nvidia-device-plugin
+  name: nvidia-device-plugin
+  namespace: nvidia
 spec:
-  interval: 15m
   chart:
     spec:
       chart: nvidia-device-plugin
