--- a/clusters/main/talos/talconfig.yaml
+++ b/clusters/main/talos/talconfig.yaml
@@ -98,6 +98,8 @@ worker:
      - name: nvme_tcp
      - name: vfio_pci
      - name: uio_pci_generic
+     - name: i915
+     - name: nvidia
     schematic:
         customization:
             systemExtensions:
