--- a/clusters/main/kubernetes/kube-system/nvidia-gpu-operator/app/helm-release.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-gpu-operator/app/helm-release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: nvidia-device-plugin
-  namespace: nvidia-device-plugin
+  namespace: kube-system
 spec:
   interval: 30m
   chart:
