--- a/clusters/main/kubernetes/kube-system/nvidia-gpu-operator/app/namespace.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-gpu-operator/app/namespace.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: nvidia-device-plugin
+  name: kube-system
   labels:
     pod-security.kubernetes.io/enforce: privileged
