--- a/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/helm-release.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/helm-release.yaml
@@ -24,32 +24,15 @@ spec:
       strategy: rollback
       retries: 3
   values:
-    image:
-      repository: nvcr.io/nvidia/k8s-device-plugin
-      tag: v0.17.0
-    runtimeClassName: nvidia
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-            - matchExpressions:
-                - key: feature.node.kubernetes.io/pci-0300_10de.present
-                  operator: In
-                  values:
-                    - "true"
-    config:
-      map:
-        default: |-
-          version: v1
-          flags:
-            migStrategy: none
-          sharing:
-            timeSlicing:
-              renameByDefault: false
-              failRequestsGreaterThanOne: false
-              resources:
-                - name: nvidia.com/gpu
-                  replicas: 5
+    gpu-operator:
       gfd:
         enabled: true
-
+        nodefeaturerules: true
+      driver:
+        enabled: false
+      runtimeClassName: nvidia
+      sharing:
+        timeSlicing:
+          resources:
+            - name: nvidia.com/gpu
+              replicas: 5
