--- a/clusters/main/kubernetes/kube-system/kustomization.yaml
+++ b/clusters/main/kubernetes/kube-system/kustomization.yaml
@@ -9,5 +9,5 @@ resources:
   - node-feature-discovery/ks.yaml
   - intel-device-plugins/ks.yaml
   - kubeapps/ks.yaml
-  - nvidia-gpu-operator/ks.yaml
-#  - nvidia-device-plugin/ks.yaml
+#  - nvidia-gpu-operator/ks.yaml
+  - nvidia-device-plugin/ks.yaml
