--- a/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
@@ -33,6 +33,13 @@ spec:
     global:
       stopAll: false
     TZ: America/Los_Angeles
+    configmap:
+        dashboard:
+            data:
+                traefik.json: '{{ .Files.Get "dashboard.json" | indent 8 }}'
+            enabled: true
+            labels:
+                grafana_dashboard: "1"
     logs:
       general:
         level: ERROR
@@ -101,6 +108,19 @@ spec:
               enabled: false
             targetPort: 9000
         type: LoadBalancer
+      metrics:
+        enabled: true
+        ports:
+          metrics:
+            enabled: true
+            forwardedHeaders:
+                enabled: false
+            port: 9180
+            protocol: http
+            proxyProtocol:
+                enabled: false
+            targetPort: 9180
+            type: ClusterIP
       tcp:
         loadBalancerIP: ${TRAEFIK_IP}
         externalTrafficPolicy: Local
@@ -126,6 +146,10 @@ spec:
               enabled: false
               trustedIPs: []
               insecureMode: false
+        serviceAccount:
+            main:
+                enabled: true
+                primary: true
     ingress:
       main:
         enabled: true
@@ -135,6 +159,9 @@ spec:
             middlewares:
               - name: local
                 namespace: traefik
+          certManager:
+            certificateIssuer: wethecommon-prod-cert
+            enabled: true
         hosts:
           - host: traefik-dashboard.${BASE_DOMAIN}
             paths:
@@ -142,6 +169,13 @@ spec:
                 pathType: Prefix
               - path: /api
                 pathType: Prefix
+        ingressClass:
+            enabled: false
+            fallbackApiVersion: ""
+            isDefaultClass: false
+        ingressRoute:
+            dashboard:
+                enabled: true
                 
     middlewares:
       ipWhiteList:
