--- a/clusters/main/kubernetes/apps/media/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/media/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
   - lidarr/ks.yaml
   - nzbget/ks.yaml
   - overseerr/ks.yaml
-  - plex/ks.yaml
+  #- plex/ks.yaml
   - sabnzbd/ks.yaml
   - sonarr/ks.yaml
   - tinymediamanager/ks.yaml
