--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -158,16 +158,16 @@ spec:
             backup:
                 enabled: true
                 mountPath: /config/Backups
-                volsync:
-                    - name: b2
-                      type: restic
-                      credentials: s3
-                      dest:
-                        enabled: true
-                        cacheCapacity: 10Gi
-                      src:
-                        enabled: true
-                        cacheCapacity: 10Gi
+#                volsync:
+#                    - name: b2
+#                      type: restic
+#                      credentials: s3
+#                      dest:
+#                        enabled: true
+#                        cacheCapacity: 10Gi
+#                      src:
+#                        enabled: true
+#                        cacheCapacity: 10Gi
         plex:
             additionalAdvertiseURL: ""
             disableGDM: false
