--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -76,16 +76,16 @@ spec:
                 readOnly: false
                 main:
                     mountPath: /config
-                    volsync:
-                     - name: config
-                       type: restic
-                       credentials: s3
-                       dest:
-                         enabled: true
-                         cacheCapacity: 100Gi
-                       src:
-                         enabled: true
-                         cacheCapacity: 100Gi
+#                    volsync:
+#                       - name: config
+#                         type: restic
+#                         credentials: s3
+#                         dest:
+#                           enabled: true
+#                           cacheCapacity: 100Gi
+#                         src:
+#                           enabled: true
+#                           cacheCapacity: 100Gi
             data:
                 enabled: true
                 type: nfs
@@ -175,9 +175,9 @@ spec:
             requireHTTPS: false
             serverIP: 192.168.10.177
         release_name: plex
-        resources:
-            limits:
-                nvidia.com/gpu: 1
+#        resources:
+#            limits:
+#                nvidia.com/gpu: 1
         securityContext:
             container:
                 UMASK: "0022"
