--- a/clusters/main/kubernetes/kube-system/nvidia-gpu-operator/app/helm-release.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-gpu-operator/app/helm-release.yaml
@@ -27,7 +27,7 @@ spec:
         enabled: true
         nodefeaturerules: true
       driver:
-        enabled: false
+        enabled: true
       runtimeClassName: nvidia
       sharing:
         timeSlicing:
