--- a/clusters/main/kubernetes/apps/media/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/media/kustomization.yaml
@@ -10,9 +10,9 @@ resources:
   - dizquetv/ks.yaml
   - emby/ks.yaml
   - lidarr/ks.yaml
-  #- nzbget/ks.yaml
-  #- overseerr/ks.yaml
+  - nzbget/ks.yaml
+  - overseerr/ks.yaml
   - plex/ks.yaml
   - sabnzbd/ks.yaml
-  #- sonarr/ks.yaml
+  - sonarr/ks.yaml
   - tinymediamanager/ks.yaml
