--- a/clusters/main/kubernetes/apps/media/emby/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/emby/app/helm-release.yaml
@@ -155,9 +155,9 @@ spec:
                         enabled: true
                         cacheCapacity: 10Gi
         release_name: emby
-#        resources:
-#            limits:
-#                gpu.intel.com/i915: 1
+        resources:
+            limits:
+                gpu.intel.com/i915: 1
         securityContext:
             container:
                 UMASK: "0022"
