--- a/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
@@ -131,9 +131,9 @@ spec:
                         enabled: true
                         cacheCapacity: 10Gi
         release_name: dizquetv
-#        resources:
-#            limits:
-#                gpu.intel.com/i915: 1
+        resources:
+            limits:
+                gpu.intel.com/i915: 1
         securityContext:
             container:
                 PUID: 1000
