--- a/clusters/main/kubernetes/apps/networking/homeassistant/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/homeassistant/app/helm-release.yaml
@@ -35,8 +35,8 @@ spec:
                         middlewares:
                             - name: local
                               namespace: traefik
-#                            - name: bouncer
-#                              namespace: traefik
+                            - name: bouncer
+                              namespace: traefik
                     certManager:
                         enabled: true
                         certificateIssuer: wethecommon-prod-cert
